[gd_scene load_steps=2 format=3 uid="uid://bl420g5h4nd8"]

[ext_resource type="Script" path="res://Scripts/Interface/main_menu.gd" id="1_5hkub"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5hkub")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GameTitle" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "War of the Elements"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -106.0
offset_right = 100.0
offset_bottom = -5.0
grow_vertical = 0
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "Start Game"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
text = "Quit Game"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -95.0
offset_top = -50.0
offset_right = -5.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="AuthorLabel" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Created by: AntWal"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
